tests/invalid/missing_interface_import2.err_exp
missing_interface_import2.m:013: In declaration of predicate
missing_interface_import2.m:013:   `missing_interface_import2.write_key'/3:
missing_interface_import2.m:013:   error: undefined type `partition_id'/0.
missing_interface_import2.m:013:   (The modules `eqvclass' and
missing_interface_import2.m:013:   `missing_interface_import3' have not been
missing_interface_import2.m:013:   imported in the interface.)
missing_interface_import2.m:013: In declaration of predicate
missing_interface_import2.m:013:   `missing_interface_import2.write_key'/3:
missing_interface_import2.m:013:   error: undefined type `io.state'/0.
missing_interface_import2.m:013:   (The module `io' has not been imported in
missing_interface_import2.m:013:   the interface.)
